--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ matrix:
   allow_failures:
     - rust: stable
     - rust: beta
-    - env: TARGET=x86_64-pc-windows-gnu
+    - rust: nightlky
+      env: TARGET=x86_64-pc-windows-gnu
   include:
     - env:
       - TARGET=x86_64-unknown-linux-musl
