--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,19 @@
 name = "proby"
 version = "0.1.4"
 authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
+description = "A single-binary web server to probe whether hosts are reachable on certain ports and return result on HTTP"
+repository = "https://github.com/svenstaro/proby"
+license = "MIT"
+readme = "README.md"
+keywords = ["http-server", "probe", "http", "server", "tcp", "port"]
+categories = ["command-line-utilities", "command-line-interface", "network-programming", "web-programming::http-server"]
+
+[badges]
+travis-ci = { repository = "svenstaro/proby", branch = "master" }
+maintenance = { status = "actively-developed" }
+
+[profile.release]
+lto = true
 
 [dependencies]
 rocket = "0.3"
