--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
     steps:
     - uses: hecrj/setup-rust-action@master
       with:
-        rust-version: stable
+        rust-version: nightly
     - uses: actions/checkout@v1
     - run: cargo build --release --locked
     - uses: svenstaro/upx-action@v1-release
