--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,12 @@ serde = "1.0"
 serde_with = "1.4.0"
 http = "0.2"
 futures = "0.3"
+simplelog = "0.7"
+log = "0.4"
+
+[dev-dependencies]
+assert_cmd = "0.12"
+surf = "1"
+port_check = "0.1"
+# rstest = "0.5"
+# pretty_assertions = "0.6"
