--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proby"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
 description = "Check whether hosts are reachable on certain ports and return result on HTTP"
 repository = "https://github.com/svenstaro/proby"
@@ -16,6 +16,9 @@ maintenance = { status = "actively-developed" }
 
 [profile.release]
 lto = true
+opt-level = 'z'
+codegen-units = 1
+panic = 'abort'
 
 [dependencies]
 actix-web = "2.0.0"
@@ -33,5 +36,3 @@ log = "0.4"
 assert_cmd = "0.12"
 surf = "1"
 port_check = "0.1"
-# rstest = "0.5"
-# pretty_assertions = "0.6"
