--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,38 +11,52 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # This should work with only the `include`s but it currently doesn't because of this bug:
-        # https://github.community/t5/How-to-use-Git-and-GitHub/GitHub-Actions-Matrix-options-dont-work-as-documented/td-p/29558
         os: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - os: ubuntu-latest
-            artifact_name: proby
-            release_name: linux-amd64
+            artifact_name: target/x86_64-unknown-linux-musl/release/proby
+            release_name: linux-x86_64
+            target: x86_64-unknown-linux-musl
           - os: windows-latest
-            artifact_name: proby.exe
-            release_name: windows-amd64.exe
+            artifact_name: target/x86_64-pc-windows-msvc/release/proby.exe
+            release_name: windows-x86_64.exe
+            target: x86_64-pc-windows-msvc
           - os: macos-latest
-            artifact_name: proby
-            release_name: macos-amd64
+            artifact_name: target/x86_64-apple-darwin/release/proby
+            release_name: macos-x86_64
+            target: x86_64-apple-darwin
 
     steps:
-    - uses: hecrj/setup-rust-action@master
-      with:
-        rust-version: nightly
-    - uses: actions/checkout@v1
-    - run: cargo build --release --locked
-    - uses: svenstaro/upx-action@v1-release
-      with:
-        file: target/release/${{ matrix.artifact_name }}
-    - name: Get tag name
-      id: tag_name
-      run: |
-        echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-      shell: bash
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v1-release
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: target/release/${{ matrix.artifact_name }}
-        asset_name: proby-${{ steps.tag_name.outputs.SOURCE_TAG }}-${{ matrix.release_name }}
-        tag: ${{ github.ref }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+
+      - run: sudo apt install musl-tools
+        if: matrix.os == 'ubuntu-latest'
+
+      - name: cargo build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release --locked --target=${{ matrix.target }}
+
+      - name: Get CHANGELOG.md entry
+        id: changelog_reader
+        uses: mindsers/changelog-reader-action@v1
+        with:
+          version: ${{ env.CURRENT_VERSION }}
+          path: ./CHANGELOG.md
+
+      - name: Release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{ matrix.artifact_name }}
+          tag: ${{ github.ref }}
+          asset_name: proby-$tag-${{ matrix.release_name }}
+          body: ${{ steps.changelog_reader.outputs.log_entry }}
