--- a/release.toml
+++ b/release.toml
@@ -1,6 +1,7 @@
 sign-commit = true
 sign-tag = true
 pre-release-replacements = [
+  {file="README.md", search="proby [0-9][a-z0-9\\.-]+", replace="proby {{version}}"} ,
   {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
   {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
   {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"},
