--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ codegen-units = 1
 [dependencies]
 actix-web = "3"
 actix-rt = "1"
-structopt = "0.3"
+clap = { version = "4", features = ["derive", "cargo", "wrap_help", "env"] }
 anyhow = "1"
 serde = "1"
-serde_with = "1"
+serde_with = "3"
 http = "0.2"
 futures = "0.3"
 simplelog = "0.12"
@@ -29,4 +29,4 @@ log = "0.4"
 [dev-dependencies]
 assert_cmd = "2"
 surf = "2"
-port_check = "0.1"
+port_check = "0.2"
